# odoo-mcp

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml
odoo_mcp/: __init__.py  __main__.py  bearer.py  config.py  error_sanitizer.py  logging_config.py  odoo_connection.py  odoo_json2_connection.py  resources.py  schemas.py  server.py  tools.py
tests/: __init__.py  conftest.py  mcp_client_validation.sh  test_advanced_resources.py  test_authentication.py  test_basic_resources.py  test_caching.py  test_config.py  test_data_formatting.py  test_database_discovery.py  test_datetime_formatting.py  test_error_handling.py  test_error_sanitization_integration.py  test_error_sanitizer.py  test_fixes_integration.py  test_integration_e2e.py  test_json2_connection.py  test_model_agnostic_example.py  test_odoo_connection_basic.py  test_package_structure.py  test_performance.py  test_resource_query_params.py  test_search_resources.py  test_search_smart_defaults.py  test_server_foundation.py  test_smart_fields.py  test_tools.py  test_transport_integration.py  test_uri_schema.py  test_write_operations.py  test_write_tools.py  test_xmlrpc_operations.py
tests/helpers/: mcp_model_manager.py  mcp_test_client.py  model_discovery.py  server_testing.py  test_mcp_simple.py  transport_client.py
